[package]
name = "sequence"
version = "0.1.0"
authors = ["Eric Harding <eric@digitalsorcery.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-file = "1.1.1"
byteorder = "1.3.4"
chrono = "0.4.15"
clap = "2.33.3"
